Resharding change stream events are not filtered by namespace

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 5.3.2, 6.0.0-rc0
    • Affects Version/s: 5.2.1, 5.3.0-rc4
    • Component/s: None
    • Fully Compatible
    • ALL
    • v5.3
    • QE 2022-04-04, QE 2022-04-18
    • 174
    • None
    • 3
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      If a change steam is opened on a particular collection with showMigrationEvents:true and a resharding operation happens on another collection, the stream will erroneously report reshardBegin and reshardDoneCatchup events.

      This issue does not appear to happen on 5.0, and was likely introduced during the extensive change stream rewrite in PM-1942.

              Assignee:
              Mickey Winters
              Reporter:
              Bernard Gorman
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: