SERVER-64780 filter out resharding events that aren't related to the namespace being watched by a changeStream